[metadata]
name = olympus
version = 1.1.2
author = LaVita GmbH
author_email = info+opensource@lavita.de
description = Utilities for use with FastAPI and django
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: FastAPI
    Framework :: Celery
    Topic :: Utilities
    Development Status :: 5 - Production/Stable
url = https://github.com/LaVita-GmbH/olympus

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    rest-client @ git+https://github.com/LaVita-GmbH/rest-client
    celery-message-consumer @ git+https://github.com/LaVita-GmbH/celery-message-consumer
    python-jose[cryptography]
    sentry-sdk
    django >= 3.0
    fastapi >= 0.63.0
    pydantic >= 1.8
    langcodes
    celery
    django-health-check >= 3.16
